force-app/main/default/objects/Application_Review__c/Application_Review__c.object-meta.xml
<CustomObject>
    <label>Application Review</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Application Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>