force-app/main/default/objects/Application_Review__c/fields/Able_to_Recruit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Recruit_Notes__c</fullName>
    <label>Able to Recruit Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>