force-app/main/default/objects/Application_Review__c/fields/Able_to_Recruit_Score__c.field-meta.xml
<CustomField>
    <fullName>Able_to_Recruit_Score__c</fullName>
    <label>Able to Recruit Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>