force-app/main/default/objects/Application_Review__c/fields/Budget_Details_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budget_Details_Notes__c</fullName>
    <label>Budget Details Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>