force-app/main/default/objects/Application_Review__c/fields/Budget_Notes__c.field-meta.xml
<CustomField>
    <fullName>Budget_Notes__c</fullName>
    <label>Budget Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>