force-app/main/default/objects/Application_Review__c/fields/Current_Program_Notes__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Notes__c</fullName>
    <label>Current Program Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>