force-app/main/default/objects/Application_Review__c/fields/Current_Program_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Program_Score__c</fullName>
    <label>Current Program Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>