force-app/main/default/objects/Application_Review__c/fields/Equipment_and_Supplies_Notes__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Supplies_Notes__c</fullName>
    <label>Equipment and Supplies Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>