force-app/main/default/objects/Application_Review__c/fields/Equipment_and_Supplies_Score__c.field-meta.xml
<CustomField>
    <fullName>Equipment_and_Supplies_Score__c</fullName>
    <label>Equipment and Supplies Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>