force-app/main/default/objects/Application_Review__c/fields/Example_of_Unsuccessful_Program_Notes__c.field-meta.xml
<CustomField>
    <fullName>Example_of_Unsuccessful_Program_Notes__c</fullName>
    <label>Example of Unsuccessful Program Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>