force-app/main/default/objects/Application_Review__c/fields/Example_of_Unsuccessful_Program_Score__c.field-meta.xml
<CustomField>
    <fullName>Example_of_Unsuccessful_Program_Score__c</fullName>
    <label>Example of Unsuccessful Program Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>