force-app/main/default/objects/Application_Review__c/fields/How_Funds_Utilized_Notes__c.field-meta.xml
<CustomField>
    <fullName>How_Funds_Utilized_Notes__c</fullName>
    <label>How Funds Utilized Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>