force-app/main/default/objects/Application_Review__c/fields/How_Program_Will_Be_Delivered_Notes__c.field-meta.xml
<CustomField>
    <fullName>How_Program_Will_Be_Delivered_Notes__c</fullName>
    <label>How Program Will Be Delivered Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>