force-app/main/default/objects/Application_Review__c/fields/How_Program_Will_Be_Delivered_Score__c.field-meta.xml
<CustomField>
    <fullName>How_Program_Will_Be_Delivered_Score__c</fullName>
    <label>How Program Will Be Delivered Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>