force-app/main/default/objects/Application_Review__c/fields/How_Story_Will_Be_Amplified_Notes__c.field-meta.xml
<CustomField>
    <fullName>How_Story_Will_Be_Amplified_Notes__c</fullName>
    <label>How Story Will Be Amplified Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>