force-app/main/default/objects/Application_Review__c/fields/How_Story_Will_Be_Amplified_Score__c.field-meta.xml
<CustomField>
    <fullName>How_Story_Will_Be_Amplified_Score__c</fullName>
    <label>How Story Will Be Amplified Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>