force-app/main/default/objects/Application_Review__c/fields/Management_Procurement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Management_Procurement_Notes__c</fullName>
    <label>Management Procurement Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>