force-app/main/default/objects/Application_Review__c/fields/Needs_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Needs_Assessment_Notes__c</fullName>
    <label>Needs Assessment Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>