force-app/main/default/objects/Application_Review__c/fields/New_or_Existing_Notes__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Notes__c</fullName>
    <label>New or Existing Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>