force-app/main/default/objects/Application_Review__c/fields/New_or_Existing_Score__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Score__c</fullName>
    <label>New or Existing Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>