force-app/main/default/objects/Application_Review__c/fields/Other_Challenges_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Challenges_Notes__c</fullName>
    <label>Other Challenges Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>