force-app/main/default/objects/Application_Review__c/fields/Other_Challenges_Score__c.field-meta.xml
<CustomField>
    <fullName>Other_Challenges_Score__c</fullName>
    <label>Other Challenges Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>