force-app/main/default/objects/Application_Review__c/fields/Other_Support__c.field-meta.xml
<CustomField>
    <fullName>Other_Support__c</fullName>
    <label>Other Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>