force-app/main/default/objects/Application_Review__c/fields/Other_Support_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Support_Comments__c</fullName>
    <label>Other Support Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>