force-app/main/default/objects/Application_Review__c/fields/Previous_Funding_Comments__c.field-meta.xml
<CustomField>
    <fullName>Previous_Funding_Comments__c</fullName>
    <label>Previous Funding Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>