force-app/main/default/objects/Application_Review__c/fields/Previous_Funding_Score__c.field-meta.xml
<CustomField>
    <fullName>Previous_Funding_Score__c</fullName>
    <label>Previous Funding Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>