force-app/main/default/objects/Application_Review__c/fields/Program_Objectives_Notes__c.field-meta.xml
<CustomField>
    <fullName>Program_Objectives_Notes__c</fullName>
    <label>Program Objectives Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>