force-app/main/default/objects/Application_Review__c/fields/Responsibilities_Notes__c.field-meta.xml
<CustomField>
    <fullName>Responsibilities_Notes__c</fullName>
    <label>Responsibilities Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>