force-app/main/default/objects/Application_Review__c/fields/Responsible_Reporting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Reporting_Notes__c</fullName>
    <label>Responsible Reporting Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>