force-app/main/default/objects/Application_Review__c/fields/Responsible_Reporting_Score__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Reporting_Score__c</fullName>
    <label>Responsible Reporting Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>