force-app/main/default/objects/Application_Review__c/fields/Should_Award__c.field-meta.xml
<CustomField>
    <fullName>Should_Award__c</fullName>
    <label>Should Award?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>