force-app/main/default/objects/Application_Review__c/fields/Strategic_Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Plan_Notes__c</fullName>
    <label>Strategic Plan Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>