force-app/main/default/objects/Application_Review__c/fields/Strategic_Plan_Score__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Plan_Score__c</fullName>
    <label>Strategic Plan Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>