force-app/main/default/objects/Application_Review__c/fields/Sustainability_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Notes__c</fullName>
    <label>Sustainability Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>