force-app/main/default/objects/Application_Review__c/fields/Unmet_Needs_Will_Be_Met_Notes__c.field-meta.xml
<CustomField>
    <fullName>Unmet_Needs_Will_Be_Met_Notes__c</fullName>
    <label>Unmet Needs Will Be Met Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>