force-app/main/default/objects/Application_Review__c/fields/Unmet_Needs_Will_Be_Met_Score__c.field-meta.xml
<CustomField>
    <fullName>Unmet_Needs_Will_Be_Met_Score__c</fullName>
    <label>Unmet Needs Will Be Met Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>