force-app/main/default/objects/Application_Review__c/fields/Vehicle_Purchase_Notes__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Purchase_Notes__c</fullName>
    <label>Vehicle Purchase Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>