force-app/main/default/objects/Application_Review__c/fields/Viability_Notes__c.field-meta.xml
<CustomField>
    <fullName>Viability_Notes__c</fullName>
    <label>Viability Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>