force-app/main/default/objects/Application_Review__c/fields/Viability_Score__c.field-meta.xml
<CustomField>
    <fullName>Viability_Score__c</fullName>
    <label>Viability Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Likely</fullName>
            </value>
            <value>
                <fullName>Likely</fullName>
            </value>
            <value>
                <fullName>Probably Likely</fullName>
            </value>
            <value>
                <fullName>Possibly Likely</fullName>
            </value>
            <value>
                <fullName>Possibly</fullName>
            </value>
            <value>
                <fullName>Possibly Not Likely</fullName>
            </value>
            <value>
                <fullName>Not Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>