force-app/main/default/objects/Application_Review__c/recordTypes/NCAI.recordType-meta.xml
<RecordType>
    <fullName>NCAI</fullName>
    <active>true</active>
    <label>NCAI</label>
</RecordType>