force-app/main/default/objects/Application_Review__c/recordTypes/Under_Armour.recordType-meta.xml
<RecordType>
    <fullName>Under_Armour</fullName>
    <active>true</active>
    <label>Under Armour</label>
</RecordType>